complete user function
